--- a/web/Views/Home/Index.cshtml
+++ b/web/Views/Home/Index.cshtml
@@ -118,8 +118,8 @@
         </div>
 
         <div class="row6">
-            <h2><b class="b1"></b><b class="b2"></b><span>路演视频</span></h2>
-            <h4>ROADSHOW VIDEO</h4>
+            <h2><b class="b1"></b><b class="b2"></b><span>创业电影</span></h2>
+            <h4>Entrepreneurship Video</h4>
             <div class="box">
                 <video src="/content/media/qch.mp4" controls preload="metadata">
                     <p>不好意思，你的浏览器不支持video标签，请使用IE9+，chrome，火狐等任一浏览器访问</p>
