--- a/web/Views/Activity/Publish.cshtml
+++ b/web/Views/Activity/Publish.cshtml
@@ -118,7 +118,7 @@
         <dt>咨询电话</dt>
         <dd id="hd_phone">
             <div>
-                <input type="text" placeholder="请输入活动资讯电话">
+                <input type="text" placeholder="请输入活动咨询电话">
             </div>
         </dd>
         <dt>活动费用</dt>
