--- a/web/Content/css/index.css
+++ b/web/Content/css/index.css
@@ -91,7 +91,7 @@
 }
 
 #mainContainer .row1 .banner .controls_2 a.current {
-    background: #f00;
+    background: #FCCC37;
 }
 
 #mainContainer .row2 {
@@ -202,14 +202,14 @@
     top: 150px;
     left: 0;
     transition: top .3s;
-    background-color: rgb(243, 168, 23);
-    color: #fff;
+    background-color: #FCCC37;
+    color: #4A4A4A;
     font-size: 24px;
     font-family: 宋体;
 }
 
 #mainContainer .row3 .box a:hover {
-    border-color: rgb(243, 168, 23);
+    border-color: #FCCC37;
 }
 
 #mainContainer .row3 .box a:hover span {
