--- a/web/Views/App/Index.cshtml
+++ b/web/Views/App/Index.cshtml
@@ -2,131 +2,67 @@
     Layout = null;
 }
 
-
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" AppDown="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title></title>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/AppDown/css/mui.css" />
-    <link rel="stylesheet" href="/AppDown/css/jquery.fullPage.css">
-    <link rel="stylesheet" href="/AppDown/css/comment.css" />
-    <script src="/AppDown/js/mui.min.js"></script>
-    <script type="text/javascript" charset="utf-8">
-        mui.init();
-    </script>
-    <script src="/AppDown/js/jquery-1.8.3.min.js"></script>
-    <script src="/AppDown/js/jquery.fullPage.min.js"></script>
-    <script src="http://cdn.staticfile.org/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script>
-        $(function () {
-            $('#dowebok').fullpage({
-                sectionsColor: ['#ff8e8c', '#ff8e8c', '#7BAABE', '#f90', '#aaccff', '#ec883f'],
-                afterLoad: function (anchorLink, index) {
-                    if (index == 2) {
-                        $('.section2').find('img').delay(500).animate({
-                            left: '0'
-                        }, 1500, 'easeOutExpo');
-                    }
-                    if (index == 3) {
-                        $('.section3').find('img').delay(500).animate({
-                            right: '-20%'
-                        }, 1500, 'easeOutExpo');
-                    }
-                    if (index == 4) {
-                        $('.section4').find('img').delay(500).animate({
-                            left: '20%'
-                        }, 1500, 'easeOutExpo');
-                    }
-                    if (index == 5) {
-                        $('.section5').find('img').delay(500).animate({
-                            right: '-20%'
-                        }, 1500, 'easeOutExpo');
-                    }
-                    if (index == 6) {
-                        $('.section6').find('img').delay(500).animate({
-                            left: '20%'
-                        }, 1500, 'easeOutExpo');
-                    }
-                },
-                onLeave: function (index, direction) {
-                    if (index == '2') {
-                        $('.section2').find('img').delay(500).animate({
-                            left: '0'
-                        }, 1500, 'easeOutExpo');
-                    }
-                    if (index == '3') {
-                        $('.section3').find('img').delay(500).animate({
-                            right: '-120%'
-                        }, 1500, 'easeOutExpo');
-                    }
-                    if (index == '4') {
-                        $('.section4').find('img').delay(500).animate({
-                            left: '-120%'
-                        }, 1500, 'easeOutExpo');
-                    }
-                    if (index == '5') {
-                        $('.section5').find('img').delay(500).animate({
-                            right: '-120%'
-                        }, 1500, 'easeOutExpo');
-                    }
-                    if (index == '6') {
-                        $('.section6').find('img').delay(500).animate({
-                            left: '-120%'
-                        }, 1500, 'easeOutExpo');
-                    }
-                }
-            });
-        });
-    </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+    <meta name="renderer" content="webkit" />
+    <title>APP下载</title>
+    <link rel="stylesheet" href="/h5/css/public.css">
+    <style>
+        .container {
+            margin: 0 !important;
+            background: url(/h5/img/bg_down.jpg) no-repeat 50% 50%;
+            background-size: 100% 100%;
+        }
+
+            .container .downbox {
+                width: 100%;
+                height: 4rem;
+                position: absolute;
+                bottom: 2rem;
+                left: 0;
+                text-align: center;
+            }
+
+            .container .btn-down {
+                background: url(/h5/img/xiazai_btn@2x.png) no-repeat 50% 50%;
+                background-size: 100% 100%;
+                width: 16.6rem;
+                height: 100%;
+                transition: opacity .2s;
+                transform: translate3d(0,0,0);
+                -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+            }
+    </style>
 </head>
 
 <body>
-    <div id="dowebok">
-        <div class="section section2" style="background-image: url(../images/beijing.png);" id="two">
-            <!-- <div style="background-image: url(images/beijing.png);" >-->
-            <img src="/AppDown/images/taitou.png" class="img-top">
-            <img src="/AppDown/images/shhouji.png" class="img-phone">
-            <div class="one">
-                <div class="button-box">
-                    <a class="io">
-                        <img src="/AppDown/images/iPhone1.png" class="a3"><img src="/AppDown/images/iPhone.png" style="display: none;" class="a4">IOS下载</a>
-                    <a class="an">
-                        <img src="/AppDown/images/Android1.png" class="a2"><img src="/AppDown/images/Android.png" style="display: none;" class="a1">Andorid下载</a>
-                </div>
-            </div>
+    <div class="container">
+        <div class="downbox">
+            <a class="btn-down"></a>
         </div>
-        <script>
-            $(".an").mouseover(function () {
-                $(".a1").css({ display: "block" })
-                $(this).css({ color: "#fff" })
-                $(".a2").css({ display: "none" })
-                window.location = "http://a.app.qq.com/o/simple.jsp?pkgname=com.qingchuang.app"
-
-            })
-            $(".an").mouseout(function () {
-                $(".a1").css({ display: "none" })
-                $(".a2").css({ display: "block" })
-                $(this).css({ color: "#ffc6c4" })
-
-            })
-            $(".io").mouseover(function () {
-                $(".a4").css({ display: "block" })
-                $(this).css({ color: "#fff" })
-                $(".a3").css({ display: "none" })
-                window.location = "http://a.app.qq.com/o/simple.jsp?pkgname=com.qingchuang.app"
-            })
-            $(".io").mouseout(function () {
-                $(".a4").css({ display: "none" })
-                $(".a3").css({ display: "block" })
-                $(this).css({ color: "#ffc6c4" })
-
-            })
-        </script>
     </div>
+    <script src="/h5/js/jquery.min.js"></script>
+    <script>
+        $(function () {
+            $('.container').css({
+                width: window.innerWidth,
+                height: window.innerHeight
+            });
+            var btnDown = $('.container .btn-down')[0];
+            btnDown.addEventListener('touchstart', function (e) {
+                this.style.opacity = .5;
+            }, false)
+            btnDown.addEventListener('touchend', function (e) {
+                this.style.opacity = 1;
+            }, false)
+            btnDown.onclick = function () {
+                window.location.href = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.qingchuang.app';
+            }
+        })
+    </script>
 </body>
-
 </html>
