--- a/web/H5/css/register.css
+++ b/web/H5/css/register.css
@@ -7,50 +7,58 @@
 }
 
 input::-webkit-input-placeholder {
-    color: #ddd;
+    color: #aaa;
 }
 
 body {
-    background: url(/h5/img/login_bg.jpg) no-repeat 50% 0;
+    background: url(../img/login_bg.jpg) no-repeat 50% 0;
     background-size: 100% 100%;
 }
-a{
+
+a {
     -webkit-tap-highlight-color: transparent;
 }
+
 .container {
     margin-bottom: 0;
     padding-top: 1.2rem;
-    background: rgba(0, 0, 0, .3);
+    background: rgba(0, 0, 0, .4);
     height: 100%;
 }
 
-.facebox{
+.facebox {
     text-align: center;
 }
-.facebox img{
-    width:7rem;
-    height:7rem;
-    border-radius:4rem;
-}
-.facebox h2{
-    color:#fff;
-    font-size: 1.2rem;
-    margin-top:.5em;
+
+*.facebox .logo {
+    width: 8rem;
+    height: 2rem;
+    background: url(../img/icon/logo_mob.png) no-repeat 50% 50%;
+    background-size: 100% auto;
+    margin:auto;
+    margin-bottom:1.2rem;
 }
 
+*.facebox .title {
+    width: 22rem;
+    height: 7rem;
+    background: url(../img/icon/suibian@2x.png) no-repeat 50% 50%;
+    background-size: 100% auto;
+    margin:auto;
+}
 
 .form-group {
     width: 80%;
-    margin: 1.3rem 10%;
-    height: 3.4rem;
-    line-height: 3.4rem;
+    margin: 1rem 10%;
+    height: 3.2rem;
+    line-height: 3.2rem;
     position: relative;
 }
 
 .form-group input {
     width: 100%;
     height: 100%;
-    border-radius: 1.7rem;
+    border-radius: 1.6rem;
     border: none;
     outline: none;
     background-color: rgba(255, 255, 255, .2);
@@ -63,11 +71,11 @@ a{
 }
 
 .form-group input.phone {
-    background-image: url(/h5/img/icon/denglu_sj_img@2x.png);
+    background-image: url(../img/icon/denglu_sj_img@2x.png);
 }
 
 .form-group input.password {
-    background-image: url(/h5/img/icon/denglu_mm_img@2x.png);
+    background-image: url(../img/icon/denglu_mm_img@2x.png);
 }
 
 .form-group .validcode {
@@ -78,38 +86,41 @@ a{
     position: absolute;
     top: 0;
     right: 0;
-    color: #fff;
+    color: #E0E0E0;
     width: 50%;
     border-radius: 1.7rem;
-    background-color: rgb(197, 197, 197);
+    background-color: rgb(144, 144, 144);
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
-.form-group .getvalidcode:active{
-    background-color: rgb(175, 175, 175);
+
+.form-group .getvalidcode:active {
+    background-color: rgb(155, 155, 155);
 }
 
 .form-group .btn-submit {
     width: 100%;
     height: 100%;
     border: .1rem solid rgba(212, 212, 212, .6);
-    border-radius: 1.7rem;
+    border-radius: 1.6rem;
     color: #fff;
     text-align: center;
     font-size: 1.1rem;
 }
-.form-group .btn-submit:active{
+
+.form-group .btn-submit:active {
     background-color: rgba(255, 255, 255, .2);
 }
+
 .form-group:last-child {
-    margin-top: 3rem;
+    margin-top: 2rem;
 }
 
 .container>p {
     color: #fff;
-    margin:0 10%;
+    margin: 0 10%;
     text-align: center;
-    margin-bottom:.6em;
+    margin-bottom: .6em;
 }
 
 .container>p a {
@@ -120,8 +131,10 @@ a{
 
 .container>p a:active {
     color: #ccc;
-    border-color:#ccc;
+    border-color: #ccc;
 }
-#registerForm{
-    margin-bottom:2rem;
+
+#registerForm {
+    margin-bottom: 2rem;
+    margin-top:2rem;
 }
