--- a/web/H5/css/shareTutor.css
+++ b/web/H5/css/shareTutor.css
@@ -99,7 +99,7 @@ header .aboutbox p {
 }
 
 .banner .frame .box.trans {
-    transition: left .2s;
+    transition: left .6s ease;
 }
 
 .banner .frame .box img {
@@ -109,20 +109,15 @@ header .aboutbox p {
 
 .banner .tag {
     position: absolute;
-    bottom: 2.4rem;
-    left: 0;
-    width: 100%;
-    height: .6rem;
-    text-align: center;
-    z-index: 1;
+    bottom:1.6rem;
+    right: 2rem;
 }
 
 .banner .tag span {
-    width: .6rem;
-    height: 100%;
+    width: 8px;
+    height: 8px;
     background: #fff;
-    border-radius: .3rem;
-    margin: 0 .1rem;
+    border-radius: 4px;
 }
 
 .banner .tag span.current {
