--- a/web/Views/App/appDown.html
+++ b/web/Views/App/appDown.html
@@ -6,29 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="renderer" content="webkit" />
     <title>APP下载</title>
-    <link rel="stylesheet" href="css/public.css">
+    <link rel="stylesheet" href="/h5/css/public.css">
     <style>
-        .container{
-            margin:0 !important;
-            background: url(img/bg_down.jpg) no-repeat 50% 50%;
+        .container {
+            margin-bottom: 0 !important;
+            background: url(/h5/img/bg_down.jpg) no-repeat 50% 50%;
             background-size: 100% 100%;
         }
-        .container .downbox{
-            width:100%;
-            height:4rem;
+        .container .downbox {
+            width: 100%;
+            height: 4rem;
             position: absolute;
-            bottom:2rem;
-            left:0;
+            bottom: 2rem;
+            left: 0;
             text-align: center;
         }
-        .container .btn-down{
-            background: url(img/xiazai_btn@2x.png) no-repeat 50% 50%;
+        .container .btn-down {
+            background: url(/h5/img/xiazai_btn@2x.png) no-repeat 50% 50%;
             background-size: 100% 100%;
-            width:16.6rem;
-            height:100%;
-            transition: opacity .2s;
-            transform: translate3d(0,0,0);
+            width: 16.6rem;
+            height: 100%;
+            opacity: .5;
+            transition: opacity .1s;
+            transform: translate3d(0, 0, 0);
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        }
+        .container .btn-down:active {
+            opacity: 1;
         }
     </style>
 </head>
@@ -36,27 +40,13 @@
 <body>
     <div class="container">
         <div class="downbox">
-            <a class="btn-down"></a>
+            <a class="btn-down" href="http://a.app.qq.com/o/simple.jsp?pkgname=com.qingchuang.app"></a>
         </div>
     </div>
-    <script src="js/jquery.min.js"></script>
     <script>
-        $(function(){
-            $('.container').css({
-                width:window.innerWidth,
-                height:window.innerHeight
-            });
-            var btnDown=$('.container .btn-down')[0];
-            btnDown.addEventListener('touchstart',function(e){
-                this.style.opacity=.5;
-            },false)
-            btnDown.addEventListener('touchend',function(e){
-                this.style.opacity=1;
-            },false)
-            btnDown.onclick=function(){
-                
-            }
-        })
+        document.addEventListener('DOMContentLoaded',function(){
+            this.getElementsByClassName('container')[0].style.height=window.innerHeight+'px';
+        },false)
     </script>
 </body>
 </html>
