--- a/web/Views/Home/Index.cshtml
+++ b/web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>青创汇首页</title>
+    <title>青创汇</title>
     <meta name="keywords" content="创业O2O平台,众创空间,梦想演播厅,演播厅,青创汇,深圳青创汇,孵化器,项目孵化器">
     <meta name="Description" content="青创汇，中国首款O2O创业生态社交软件、创客管理云系统，是专为“双创”量身定制的一站式创业资源对接平台。">
     <link rel="stylesheet" href="/content/css/public.css">
