--- a/web/Views/Invitation/Index.cshtml
+++ b/web/Views/Invitation/Index.cshtml
@@ -8,6 +8,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="format-detection" content="telephone=no" /> 
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="renderer" content="webkit" />
@@ -35,7 +36,7 @@
             </tr>
         </table>
         <div class="seedetailsbox">
-            <a href="@Url.Action("list", "invitation")">查看明细</a>
+            <a href="/invitation/list">查看明细</a>
         </div>
         <div class="codebox">
             <p><span>我的邀请码</span><b>@ViewBag.Phone</b></p>
