--- a/web/Views/Invitation/List1.cshtml
+++ b/web/Views/Invitation/List1.cshtml
@@ -6,7 +6,7 @@
 {
     foreach (var item in Model.Items)
     {
-    <tr>
+    <tr data-url="/Invitation/Info?UserGuid=@item.Guid">
         <td>@item.t_User_LoginId</td>
         <td>@item.t_User_Date.ToShortDateString()</td>
     </tr>
