--- a/web/Views/wxUser/wxReg.cshtml
+++ b/web/Views/wxUser/wxReg.cshtml
@@ -82,12 +82,9 @@
                 },
                 success: function (msg) {
                     alert(msg.Data);
-                    //if (msg.type == "success") {
-                    //    alert(msg.Data);
-                    //    location.href = msg.ParentURL;
-                    //} else {
-                    //    alert(msg.Data);
-                    //}
+                    if (msg.type == "success") {                        
+                        location.href = '/voucher/index'
+                    }
                 },
                 error: function (data, status, e) {
                     alert('上传文件出错:' + e);
