--- a/web/H5/css/page4.css
+++ b/web/H5/css/page4.css
@@ -107,7 +107,7 @@ header h2 {
 
 .signed div {
     padding: 1rem 0 1rem .9rem;
-    border-bottom: 1px solid #f0f0f0
+    border-bottom: 1px solid #f0f0f0;
 }
 
 .signed div a {
