--- a/web/H5/css/page5.css
+++ b/web/H5/css/page5.css
@@ -30,12 +30,12 @@ header h2 {
 }
 
 .dynamic {
-    padding: 0 1.5rem;
+    padding: 0 .9rem;
 }
 
 .dynamic .title {
     width: 100%;
-    padding: 1.2rem 0;
+    padding: 1rem 0;
 }
 
 .dynamic .title:after {
@@ -46,55 +46,44 @@ header h2 {
 
 .dynamic .title td:nth-child(1) {
     width: 5rem;
-}
-
-.dynamic .title img {
-    width: 5rem;
     height: 5rem;
+}
+.dynamic .title td:nth-child(2){
+    padding-left:.6rem;
+}
+.dynamic .title img {
+    width: 100%;
+    height: 100%;
+    display: block;
     border-radius: 2.5rem;
-    margin-right: 1rem;
 }
 
 .dynamic .title h2 {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     color: #1b1b1b;
-<<<<<<< .mine
-    margin-bottom: .7rem;
+    margin-bottom: .3rem;
 }
 
 .dynamic .title h3 {
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #d6d6d6;
 }
 
 .dynamic > p.black {
-    font-size: 1.3rem;
-    color: #1b1b1b;
-    margin-bottom: 1rem;
-}
-
-.dynamic .imgbox img {
-=======
-    margin-bottom: .7rem;
-}
-
-.dynamic .title h3 {
-    font-size: 1.2rem;
-    color: #d6d6d6;
-}
-
-.dynamic > p.black {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     color: #1b1b1b;
     margin-bottom: .3rem;
     line-height: 1.6em;
+    padding: 0 .3rem;
 }
-
+.dynamic .imgbox{
+    padding:0 .3rem;
+}
 .dynamic .imgbox img {
->>>>>>> .r627
     width: 32%;
     float: left;
     margin-left: 2%;
+    margin-bottom: .7rem;
 }
 
 .dynamic .imgbox img.first {
@@ -109,12 +98,13 @@ header h2 {
 
 .dynamic > p.position {
     color: #d6d6d6;
-    font-size: 1.2rem;
-    margin-bottom: 1.2rem;
+    font-size: 1rem;
+    margin-bottom: .9rem;
 }
 
 .dynamic > p.position i {
     font-size: 1.3rem;
+    float: left;
 }
 
 .dynamic .tools {
@@ -123,8 +113,8 @@ header h2 {
 
 .dynamic .tools a {
     width: 4rem;
-    height: 2.4rem;
-    line-height: 2.4rem;
+    height: 2.2rem;
+    line-height: 2.2rem;
     text-align: center;
     border: 1px solid #eeeeee;
     border-radius: 1.5rem;
@@ -155,19 +145,25 @@ header h2 {
     clear: both;
 }
 
+.dynamic i.fa {
+    width: 100%;
+    height: 100%;
+    background-size: auto 1.6rem;
+    background-position: 50% 50%;
+}
+
 .dynamic > .date {
     color: #d6d6d6;
-    font-size: 1.2rem;
-    padding-left: 1.2rem;
+    font-size: 1rem;
 }
 
 .visitor {
-    padding-left: 1.5rem;
+    padding-left: .9rem;
+    border-bottom: 1px solid #f0f0f0;
 }
 
 .visitor div {
-    padding: 1.2rem 0;
-    border-bottom: 1px solid #f0f0f0;
+    padding: .6rem 0;
 }
 
 .visitor div:after {
@@ -190,20 +186,16 @@ header h2 {
     margin-left: 0;
 }
 
-.commentbox {
-    margin-top: 1rem;
-}
-
 .commentbox > h2 {
-    line-height: 4rem;
+    line-height: 3.4rem;
     color: #777777;
-    font-size: 1.3rem;
-    padding-left: 1.5rem;
+    font-size: 1.1rem;
+    padding-left: .9rem;
 }
 
 .commentbox .commentlist {
     border-bottom: 1px solid #f0f0f0;
-    padding-left: 1.5rem;
+    padding-left: 1rem;
 }
 
 .commentbox .commentlist li {
@@ -229,25 +221,19 @@ header h2 {
 }
 
 .commentbox .commentlist li div h3 {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     color: #1b1b1b;
-    margin-bottom: .6rem;
-    font-weight: bold;
+    margin-bottom: .3rem;
 }
 
 .commentbox .commentlist li div h3 span {
     color: #cacaca;
-    font-size: 1.2rem;
+    font-size: 1rem;
     padding: 0 1.2rem 0 1.5rem;
 }
 
-.commentbox .commentlist li div h3 .remove {
-    color: #4a90e4;
-    font-size: 1.2rem;
-}
-
 .commentbox .commentlist li div p {
-    font-size: 1.2rem;
+    font-size: 1rem;
     padding-right: .5rem;
     line-height: 1.6em;
 }
