--- a/web/H5/css/page1.css
+++ b/web/H5/css/page1.css
@@ -2,159 +2,367 @@ body {
     background: #f4f4f4;
 }
 
-header {
-    background: url(../img/header1.jpg);
-    background-size: 100% 100%;
-    padding-bottom: 1.2rem;
-    color: #fff;
-}
-
-header .head-nav {
-    height: 4rem;
-    line-height: 4rem;
-}
-
-header .head-nav a {
-    color: #fff;
-    font-size: 2.2rem;
-    min-width: 4rem;
-    height: 100%;
-    text-align: center;
-}
-
-header .head-nav a.left {
-    float: left;
-}
-
-header .head-nav a.right {
-    float: right;
-    line-height: 3rem;
-}
-
-header .box {
-    text-align: center;
-    padding: 0 2rem;
-}
-
-header .box img {
-    width: 6rem;
-    height: 6rem;
-    border-radius: 3rem;
-    margin-bottom: .8rem;
-}
-
-header .box h2 {
-    font-size: 1.3rem;
-    margin-bottom: 1rem;
-}
-
-header .box h3 {
-    font-size: 1.2rem;
-    line-height: 1.6rem;
-}
-
-.lists {
-    font-size: 1.3rem;
-}
-
-.lists ul {
-    margin-bottom: .5rem;
-}
-
-.lists ul li {
-    line-height: 4rem;
-    border-top: 1px solid #e2e2e2;
-    background: #fff;
-    padding-left: 1.5rem;
-}
-
-.lists ul li label {
-    color: #bcbcbc;
-    margin-right: 2rem;
-}
-
-.lists ul li span {
-    color: #1a1a1a;
-}
-
-.lists ul li:nth-child(1) {
-    border-top: none;
-}
-
-.lists ul:nth-child(3) span {
-    color: #4a90e2;
-}
-
-.aboutbox {
-    background: #fff;
-    color: #515151;
-    padding: 1rem 0 2rem 0;
-    margin-bottom: .5rem;
-}
-
-.aboutbox h2 {
-    font-size: 1.3rem;
-    padding-left: 1.5rem;
-    margin-bottom: .5em;
-}
-
-.aboutbox p {
-    font-size: 1.2rem;
-    padding: 0 2em;
-    line-height: 1.6em;
-}
-
-.demand {
-    background: #fff;
-    color: #515151;
-    padding: 1rem 0 2rem 0;
-}
-
-.demand:after {
+.clear:after{
     content: '';
     display: block;
     clear: both;
 }
 
-.demand h2 {
-    font-size: 1.3rem;
-    padding-left: 1.5rem;
-    margin-bottom: 1em;
+.downloadbox {
+    z-index: 2;
+}
+
+.container{
+    margin:3.4rem 0;
+}
+
+header {
+    background: url(../img/header1.jpg);
+    background-size: 100% 100%;
+    height:15rem;
+    color: #fff;
+    padding:2rem 1.2rem 0 1.2rem;
+    text-align: center;
+}
+
+header img {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 3rem;
+    margin-bottom: .8rem;
+    background: none;
+}
+
+header h2 {
+    font-size: 1.2rem;
+    margin-bottom: .8rem;
+}
+
+header h3 {
+    font-size: .9rem;
+    line-height: 1.6rem;
+}
+
+.lists{
+    margin-bottom: .5rem;
+    font-size: 1rem;
+}
+
+.lists li {
+    line-height: 3.4rem;
+    border-top: 1px solid #e2e2e2;
+    background: #fff;
+    padding:0 1.2rem;
+}
+
+.lists li span {
+    color: #9c9c9c;
+    float:right;
+}
+.lists2 li span{
+    float:none;
+    color:#4a90e2;
+    margin-left:1rem;
+}
+
+.lists li:nth-child(1) {
+    border-top: none;
+}
+
+.detailsbox {
+    background: #fff;
+    margin-bottom: .5rem;
+}
+
+.detailsbox h2 {
+    font-size: 1rem;
+    padding-left: 1.2rem;
+    line-height: 3.4rem;
+    border-bottom:1px solid #e2e2e2;
+}
+
+.detailsbox p {
+    font-size: .9rem;
+    padding: .4em 1.2rem .4em 2rem;
+    line-height: 1.6em;
+    color: #9c9c9c;
+}
+
+.teambox{
+    background: #fff;
+    margin-bottom: .5rem;
+}
+
+.teambox h2 {
+    font-size: 1rem;
+    padding-left: 1.2rem;
+    line-height: 3rem;
+    border-bottom:1px solid #e2e2e2;
+}
+
+.teambox table{
+    width:360px;
+    padding-left:1rem;
+}
+.teambox table td{
+    border-top:1px solid #e2e2e2;
+    padding: .4rem 0 .3rem 0;
+}
+.teambox table td:nth-child(1){
+    width:4rem;
+    height:4rem;
+    box-sizing: content-box;
+    padding-right:1rem;
+}
+.teambox table tr:nth-child(1) td{
+    border-top:none;
+}
+
+.teambox table td:nth-child(2){
+    padding-right:1rem;
+}
+
+.teambox table td img{
+    width:100%;
+    height:100%;
+    border-radius:2rem;
+    background: none;
+}
+
+.teambox table td h3{
+    font-size: 1.2rem;
+    margin-bottom:.6rem;
+}
+
+.teambox table td p{
+    font-size: 1rem;
+    color:#4a90e2;
+    width:18rem;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+/* 导师展示 */
+.showbox{
+    background: #fff;
+    margin-bottom: .5rem;
+}
+.showbox h2 {
+    line-height: 3.4rem;
+    font-size: 1rem;
+    padding-left: 1.2rem;
+}
+
+.banner {
+    width: 100%;
+    height: 15rem;
+    position: relative;
+}
+
+.banner .frame {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background: url(../img/avator.png);
+    background-size: 100% 100%;
+    overflow: hidden;
+}
+
+.banner .frame .box {
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translate3d(0, 0, 0);
+}
+
+.banner .frame .box.trans {
+    transition: left .6s ease;
+}
+
+.banner .frame .box img {
+    height: 100%;
+    float: left;
+    background: none;
+}
+
+.banner .tag {
+    position: absolute;
+    bottom:1.6rem;
+    right: 2rem;
+}
+
+.banner .tag span {
+    width: 8px;
+    height: 8px;
+    background: #fff;
+    border-radius: 4px;
+}
+
+.banner .tag span.current {
+    background: rgb(161, 201, 240);
+}
+
+.linksbox{
+    background: #fff;
+    margin-bottom: .5rem;
+}
+
+.linksbox h2{
+    font-size: 1rem;
+    padding-left: 1.2rem;
+    line-height: 3.4rem;
+    border-bottom: 1px solid #e2e2e2;
+}
+
+.linksbox div{
+    padding: 1.2rem;
+    padding-left: 2rem;
+}
+
+.linksbox div a{
+    padding-top:4rem;
+    width:33.33%;
+    float: left;
+    text-align: center;
+    color: #000;
+}
+
+.linksbox div a.gw{
+    background: url(../img/icon_xin.png) no-repeat 50% 0;
+    background-size: 3rem 3rem;
+}
+
+.linksbox div a.ct{
+    background: url(../img/icon_xin.png) no-repeat 50% 0;
+    background-size: 3rem 3rem;
+}
+
+.linksbox div a.wx{
+    background: url(../img/icon_xin.png) no-repeat 50% 0;
+    background-size: 3rem 3rem;
+}
+
+.demand {
+    background: #fff;
+    margin-bottom: .5rem;
+}
+
+.demand h2.first {
+    font-size: 1rem;
+    line-height: 3rem;
+    padding-left: 1.2rem;
+}
+
+.demand h2.last{
+    font-size: 1.2rem;
+    line-height: 3.4rem;
+    padding-left: 2rem;
 }
 
 .demand div {
-    padding: 0 5%;
-    height: 3rem;
-    line-height: 3rem;
+    padding: 0 1.2rem;
 }
 
 .demand div a {
-    width: 27.33%;
-    margin: 0 3%;
-    height: 100%;
+    margin: 0 .5rem;
+    margin-bottom: .5rem;
+    line-height: 2.4rem;
     float: left;
     text-align: center;
+    font-size: 1rem;
+    color: #1a1a1a;
+    border: 1px solid #1a1a1a;
+    border-radius: 1.2rem;
+    padding: 0 1.2rem;
+}
+
+.commentlist {
+    background: #fff;
+}
+
+.commentlist li {
+    padding: 1rem 0;
+    border-top: 1px solid #f0f0f0;
+    margin-left: 1.2rem;
+}
+
+.commentlist li > a {
+    width: 3rem;
+    float: left;
+    margin-right: 1rem;
+}
+
+.commentlist li > a img {
+    width: 100%;
+    background: #fff;
+}
+
+.commentlist li div {
+    padding-left: 4rem;
+}
+
+.commentlist li div h3 {
     font-size: 1.2rem;
     color: #1a1a1a;
-    border: 1px solid #000;
-    border-radius: 1.7rem;
+    margin-bottom: .6rem;
+}
+
+.commentlist li div h3 span {
+    color: #cacaca;
+    font-size: 1rem;
+    padding: 0 1.2rem;
+}
+
+.commentlist li div p {
+    font-size: 1rem;
+    padding-right: .5rem;
+    line-height: 1.6em;
+}
+
+.commentlist li div p strong {
+    color: #e9e9e9;
+    margin-right: 1rem;
+}
+
+.commentlist li:first-child {
+    border-top: none;
+}
+
+.commentlist>p{
+    text-align: center;
+    font-size: 1.2rem;
+    color:#9c9c9c;
+    line-height: 4rem;
 }
 
 footer {
-    height: 4rem;
-    line-height: 4rem;
+    height: 3.4rem;
     background: #4a90e2;
 }
 
 footer a {
-    width: 50%;
+    width: 33.33%;
+    height:100%;
+    line-height: 3.4rem;
     float: left;
     text-align: center;
     color: #fff;
-    font-size: 1.3rem;
-}
-
-footer a:nth-child(1) {
+    font-size: 1rem;
     background: url(../img/line_white.png) no-repeat right 50%;
     background-size: 1px 70%;
+}
+
+footer a:last-child {
+    background: none;
+}
+
+i.fa {
+    background-size: 100% 100%;
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    position: relative;
+    top:2px;
 }
