--- a/web/H5/css/page3.css
+++ b/web/H5/css/page3.css
@@ -1,85 +1,111 @@
+.clear:after{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.downloadbox {
+    z-index: 2;
+}
+
+.container{
+    margin:3.4rem 0;
+}
+
 header {
     background: url(../img/header3.jpg);
     background-size: 100% 100%;
-    padding-top: 4rem;
-    padding-bottom: 1.2rem;
+    height:15rem;
     color: #fff;
-}
-
-header .head-nav {
-    height: 4rem;
-    line-height: 4rem;
-}
-
-header .head-nav a {
-    color: #fff;
-    font-size: 2.2rem;
-    min-width: 4rem;
-    height: 100%;
+    padding:2rem 1.2rem 0 1.2rem;
     text-align: center;
 }
 
-header .head-nav a.left {
-    float: left;
-}
-
-header .head-nav a.right {
-    float: right;
-}
-
-header .box {
-    text-align: center;
-}
-
-header .box img {
+header img {
     width: 6rem;
     height: 6rem;
     border-radius: 3rem;
     margin-bottom: .8rem;
+    background: none;
 }
 
-header .box h2 {
-    font-size: 1.3rem;
-    margin-bottom: 1rem;
+header h2 {
+    font-size: 1.2rem;
+    margin-bottom: .8rem;
 }
 
-header .box h3 {
-    font-size: 1.4rem;
+header h3 {
+    font-size: .9rem;
+    line-height: 1.6rem;
 }
 
-header .box h3 span {
+header h3 span {
     margin: 0 1rem;
 }
 
 .table {
-    padding: 1.2rem 0 .8rem 0;
+    padding: .5rem 0;
     border-bottom: 1px solid #d2d2d2;
 }
 
 .table li {
     float: left;
-    width: 50%;
+    width: 33.33%;
     text-align: center;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     color: #353535;
-}
-
-.table li b {
-    display: block;
-    margin-top: .5rem;
-    font-weight: normal;
-    color: #bcbcbc;
-}
-
-.table li:nth-child(1) {
     background: url(../img/line.png) no-repeat right 50%;
     background-size: 1px 80%;
 }
 
-.table:after {
-    content: '';
+.table li:last-child{
+    background: none;
+}
+
+.table li b {
     display: block;
-    clear: both;
+    margin-top: .4rem;
+    font-weight: normal;
+    color: #bcbcbc;
+}
+
+.dynamicbox h2{
+    line-height: 3rem;
+    background: #f3f3f3;
+    font-size: 1.2rem;
+    padding-left:1.2rem;
+}
+
+.dynamicbox table{
+    width:100%;
+    background: url(../img/icon/right.png) no-repeat right 50%;
+    background-size: auto 2rem;
+    background-origin: content-box;
+    padding:0 2rem 0 .5rem;
+}
+
+.dynamicbox table td{
+    padding: .5rem 0;
+}
+
+.dynamicbox table td:nth-child(1){
+    width: 7rem;
+    height: 5rem;
+    box-sizing: content-box;
+    padding-right:1rem;
+}
+
+.dynamicbox table td img{
+    width: 100%;
+    height: 100%;
+}
+
+.dynamicbox table td h3{
+    margin-bottom: 1rem;
+}
+
+.dynamicbox table td p{
+    color: #bcbcbc;
 }
 
 .aboutbox {
