--- a/web/H5/css/page2.css
+++ b/web/H5/css/page2.css
@@ -2,157 +2,167 @@ body {
     background: #f3f3f3;
 }
 
+.clear:after{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.downloadbox {
+    z-index: 2;
+}
+
+.container{
+    margin:3.4rem 0;
+}
+
 header {
     background: url(../img/header3.jpg);
     background-size: 100% 100%;
-    padding-top: 4rem;
-    padding-bottom: 1.2rem;
+    height:15rem;
     color: #fff;
-}
-
-header .head-nav {
-    height: 4rem;
-    line-height: 4rem;
-}
-
-header .head-nav a {
-    color: #fff;
-    font-size: 2.2rem;
-    min-width: 4rem;
-    height: 100%;
+    padding:3rem 1.2rem 0 1.2rem;
     text-align: center;
 }
 
-header .head-nav a.left {
-    float: left;
-}
-
-header .head-nav a.right {
-    float: right;
-}
-
-header .box {
-    text-align: center;
-}
-
-header .box img {
+header img {
     width: 6rem;
     height: 6rem;
     border-radius: 3rem;
     margin-bottom: .8rem;
 }
 
-header .box h2 {
-    font-size: 1.3rem;
+header h2 {
+    font-size: 1.2rem;
+    margin-bottom: .8rem;
 }
 
 .table {
-    display: flex;
+    padding: .5rem 0;
     background: #fff;
-    padding: 1.2rem 0 .8rem 0;
     border-bottom: 1px solid #d2d2d2;
 }
 
 .table li {
+    float: left;
     width: 50%;
-    color: #353535;
     text-align: center;
-    font-size: 1.3rem;
-}
-
-.table li b {
-    display: block;
-    margin-top: .5rem;
-    font-weight: normal;
-    color: #bcbcbc;
-}
-
-.table li:nth-child(1) {
+    font-size: 1.1rem;
+    color: #353535;
     background: url(../img/line.png) no-repeat right 50%;
     background-size: 1px 80%;
 }
 
+.table li:last-child{
+    background: none;
+}
+
+.table li b {
+    display: block;
+    margin-top: .4rem;
+    font-weight: normal;
+    color: #bcbcbc;
+}
+
+.stagebox,.fieldbox,.moneybox{
+    background: #fff;
+    padding-left: 1.5rem;
+}
+.moneybox{
+    padding-bottom: 1.2rem;
+}
+.stagebox > h2,.fieldbox > h2,.moneybox > h2{
+    font-size: 1.2rem;
+    color: #1a1a1a;
+    line-height: 3rem;
+}
+
+.fieldbox ul,.stagebox ul{
+    margin-left: .6rem;
+    border-bottom:1px solid #f3f3f3;
+}
+
+.moneybox span{
+    margin-left: .8rem;
+}
+
+.fieldbox ul li ,
+.stagebox ul li{
+    float: left;
+    width: 25%;
+    height:2.2rem;
+    line-height: 2.2rem;
+    border-radius: 1.1rem;
+    border:1px solid #1a1a1a;
+    text-align: center;
+    margin:0 6% .8rem 0;
+    font-size: 1.1rem;
+}
+
 .aboutbox {
     background: #fff;
-    padding: 2rem 0 .5rem 0;
-    margin-bottom: .5rem;
+    margin-bottom: .8rem;
+    border-top:1px solid #f3f3f3;
+    padding:0 .9rem;
+    padding-bottom: .9rem;
 }
 
 .aboutbox h2 {
-    font-size: 1.3rem;
-    padding-left: 1.5rem;
-    margin-bottom: .5em;
+    font-size: 1.2rem;
+    line-height: 3.4rem;
+    height: 3.4rem;
     color: #1a1a1a;
 }
 
 .aboutbox p {
     font-size: 1.2rem;
-    padding: 0 2em;
     line-height: 1.6em;
     color: #777777;
 }
 
-.aboutbox .more {
-    float: right;
-    font-size: 1.2rem;
-    margin-right: 1rem;
-    padding: 1rem;
-    color: #8c8c8c;
-}
-
-.aboutbox:after {
-    content: '';
-    display: block;
-    clear: both;
-}
-
-.case {
+.casebox {
     background: #fff;
-    padding-top: 2rem;
-    margin-bottom: .5rem;
+    margin-bottom: .8rem;
+    padding:0 .9rem;
 }
 
-.case h2 {
-    font-size: 1.3rem;
+.casebox h2 {
+    font-size: 1.2rem;
     color: #1b1b1b;
-    padding-left: 1.5rem;
-    margin-bottom: 2rem;
+    line-height: 2rem;
+    margin-bottom: .3rem;
 }
 
-.case .listbox li {
+.casebox .listbox li {
     width: 25%;
     float: left;
     text-align: center;
     font-size: 1.2rem;
-    margin-bottom: 2rem;
+    margin-bottom:.6rem;
 }
 
-.case .listbox li a {
+.casebox .listbox li a {
     width: 75%;
     color: #1a1a1a;
+    font-size: 1.1rem;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-.case .listbox li a img {
+.casebox .listbox li a img {
     width: 100%;
     margin-bottom: .6rem;
 }
 
-.case:after {
-    content: '';
-    display: block;
-    clear: both;
-}
-
 .member {
     background: #fff;
-    padding: 2rem 0;
 }
 
 .member > h2 {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
+    line-height: 2rem;
     color: #1b1b1b;
-    padding-left: 1.5rem;
-    margin-bottom: 2rem;
+    padding-left: .9rem;
+    margin-bottom: .1rem;
 }
 
 .member table {
@@ -163,34 +173,33 @@ header .box h2 {
 .member table td a,
 .member table td img {
     width: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .member table td h3 {
     color: #1b1b1b;
-    font-size: 1.3rem;
-    margin-bottom: .6rem;
+    font-size: 1.2rem;
+    margin-bottom: .3rem;
 }
 
 .member table td p {
     color: #c9c9c9;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     line-height: 1.6rem;
+    width: 18rem;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .member table td:nth-child(1) {
-    width: 30%;
-    padding-right: 2rem;
-}
-
-.member table td:after {
-    content: '';
-    display: block;
-    clear: both;
+    width: 5rem;
+    padding-right: .8rem;
 }
 
 footer {
-    height: 4rem;
-    line-height: 4rem;
+    height: 3.4rem;
+    line-height: 3.4rem;
     background: #4a90e2;
 }
 
@@ -198,5 +207,5 @@ footer a {
     width: 100%;
     text-align: center;
     color: #fff;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
 }
