与微信服务器建立会话

--- a/web/Views/Invitation/Index.cshtml
+++ b/web/Views/Invitation/Index.cshtml
@@ -40,7 +40,7 @@
         </div>
         <div class="codebox">
             <p><span>我的邀请码</span><b>@ViewBag.Phone</b></p>
-            <a href="javascript:">立即邀请</a>
+            @*<a href="javascript:">立即邀请</a>*@
         </div>
     </div>
 </body>
