--- a/web/Views/wxUser/Bind.cshtml
+++ b/web/Views/wxUser/Bind.cshtml
@@ -227,7 +227,7 @@
                         wx.closeWindow();
                     } else {
                         if(msg.Data.indexOf('已存在')>0){
-                            tipInfo("账户异常，请先解除绑定");
+                            tipInfo("您已绑定，请先解除绑定");
                         }else{
                             tipInfo(msg.Data);
                         }
