--- a/web/Views/wxUser/PayPlace.cshtml
+++ b/web/Views/wxUser/PayPlace.cshtml
@@ -19,8 +19,9 @@
 
 <body>
     <input type="text" id="url" value="@ViewBag.ReturnUrl"  style="display:none"/>
-    
+
     <div class="container">
+        <input style="display:none" id="txtIsOrder" value="@ViewBag.IsOrder" />
         <div class="orderbox">
             <p>订单号: @ViewBag.OrderNo</p>
             <div>
@@ -55,44 +56,12 @@
     </div>
 
     <script src="/content/js/jquery.min.js"></script>
-    @*<script src="https://res.mail.qq.com/mmr/static/lib/js/lazyloadv3.js" type="text/javascript"></script>*@
-    <script src="https://res.wx.qq.com/open/js/jweixin-1.1.0.js" type="text/javascript"></script>
+    <script src="~/H5/js/util.js"></script>
     <script type="text/javascript">
-        // 当微信内置浏览器完成内部初始化后会触发WeixinJSBridgeReady事件。
-        document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
-            //公众号支付
-            jQuery('a#getBrandWCPayRequest').click(function (e) {
-                WeixinJSBridge.invoke('getBrandWCPayRequest', {
-                    "appId": "@ViewData["appId"]", //公众号名称，由商户传入
-                    "timeStamp": "@ViewData["timeStamp"]", //时间戳
-                    "nonceStr": "@ViewData["nonceStr"]", //随机串
-                    "package": "@Html.Raw(ViewData["package"])",//扩展包
-                    "signType": "MD5", //微信签名方式:1.sha1
-                    "paySign": "@ViewData["paySign"]" //微信签名
-                }, function (res) {
-
-                    if (res.err_msg == "get_brand_wcpay_request:ok") {
-                        alert("微信支付成功!");
-                        // location.href='/relay/share?OrderNo=@ViewData["orderno"]';
-                        var url = $("#url").val();
-
-                        location.href = url;
-                    } else if (res.err_msg == "get_brand_wcpay_request:cancel") {
-                        alert("用户取消支付!");
-                    } else {
-                        // alert(res.err_msg);
-                        alert("支付失败!");
-                    }
-                    // 使用以上方式判断前端返回,微信团队郑重提示：res.err_msg将在用户支付成功后返回ok，但并不保证它绝对可靠。
-                    //因此微信团队建议，当收到ok返回时，向商户后台询问是否收到交易成功的通知，若收到通知，前端展示交易成功的界面；若此时未收到通知，商户后台主动调用查询订单接口，查询订单的当前状态，并反馈给前端展示相应的界面。
-                });
-
-            });
-
-            //WeixinJSBridge.log('yo~ ready.');
-
-        }, true);
-
+        var mm = $("#txtIsOrder").val();
+        document.body.innerHTML = '';
+        util.msgBox(mm);
+        setTimeout(function () { window.location.href = '/wx/reserveSpace.html'; }, 2000)
         function godown() {
             location.href = 'http://www.cn-qch.com/app';
         }
