--- a/web/Views/Invitation/List.cshtml
+++ b/web/Views/Invitation/List.cshtml
@@ -60,7 +60,7 @@
             left: 0;
             bottom: 0;
             right: 0;
-            background: #fff url(/h5/img/invitation/imgnodata.png) no-repeat 50% 14rem;
+            background: #fff url(/h5/img/icon/imgnodata.png) no-repeat 50% 14rem;
             background-size: 10rem auto;
             padding-top: 24rem;
             text-align: center;
