--- a/web/Content/css/news.css
+++ b/web/Content/css/news.css
@@ -5,63 +5,184 @@
     width: 1180px;
     margin: auto;
 }
-.contentbox>h2{
-    margin: 40px 0;
-    color: #252525;
+.contentbox .toolsbox{
+    background: rgb(238,238,238);
+    margin-bottom: 30px;
+    border: 1px solid rgb(228,228,228);
+    height: 50px;
+    line-height: 50px;
+    padding: 0 18px;
 }
-.contentbox>h2 a{
+.contentbox .toolsbox .leftbox{
+    color: #252525;
+    float: left;
+}
+.contentbox .toolsbox .leftbox a{
     margin-right: 20px;
     color: #000;
-    border-bottom: 2px solid #fff;
     font-size: 16px;
-    padding-bottom: 4px;
+    line-height: 48px;
+    height: 48px;
 }
-.contentbox>h2 a:hover,.contentbox>h2 a.active{
+.contentbox .toolsbox .leftbox a:hover{
     color: rgb(64,138,213);
-    border-color:rgb(64,138,213);
 }
-.contentbox .listbox li{
+.contentbox .toolsbox .leftbox a.active{
+    color: rgb(64,138,213);
+    background: url(../image/news_nav.png) no-repeat 50% 34px;
+}
+
+.contentbox .toolsbox .rightbox{
+    float: right;
+    height: 34px;
+    position: relative;
+    top: 7px;
+    border-radius: 4px;
+    border: 1px solid rgb(228,228,228);
+    overflow: hidden;
+}
+.contentbox .toolsbox .rightbox a{
+    height: 100%;
+    text-align: center;
+    background-color: #fff;
+    padding: 0 12px;
+    float: left;
+    opacity: .5;
+    filter:alpha(opacity=50);
+}
+.contentbox .toolsbox .rightbox a:hover,.contentbox .toolsbox .rightbox a.active{
+    opacity: 1;
+    filter:alpha(opacity=100);
+}
+.contentbox .toolsbox .rightbox a#tbPic{
+    border-right: 1px solid rgb(228,228,228);
+}
+.contentbox .toolsbox .rightbox #tbPic i {
+    background-position: -30px 50%;
+}
+.contentbox .toolsbox .rightbox #tbText i{
+    background-position: 0 50%;
+}
+.contentbox .toolsbox .rightbox a i{
+    background: url(../image/t0171ca8f598efaea05.png) no-repeat;
+    height: 100%;
+    width: 15px;
+    display: block;
+}
+/* 列表视图 */
+body.listview .contentbox .listbox li{
     padding: 20px 6px;
     border-bottom: 1px dashed #c5c5c5;
 }
-.contentbox .listbox li.first{
+body.listview .contentbox .listbox li.first{
     border-top: 1px dashed #c5c5c5;
 }
-.contentbox .listbox li>a{
+body.listview .contentbox .listbox li>a{
     display: block;
     color: #252525;
 }
-.contentbox .listbox li:hover{
+body.listview .contentbox .listbox li:hover{
     background: #f9f9f9;
 }
-.contentbox .listbox img{
+body.listview .contentbox .listbox img{
     width: 168px;
     height: 105px;
     float: left;
     margin-right: 12px;
 }
-.contentbox .listbox .right h3{
+body.listview .contentbox .listbox .right h3{
     margin-bottom: 20px;
     font-size: 18px;
     color: #000;
     font-weight: bold;
 }
-.contentbox .listbox .right h3 b{
+body.listview .contentbox .listbox .right h3 b{
     float: right;
     font-weight: normal;
     color: #252525;
     font-size: 14px;
+    margin-left: 20px;
 }
-.contentbox .listbox .right span{
+body.listview .contentbox .listbox .right span{
     font-size: 12px;
     color: #999;
     margin-bottom: 12px;
 }
-.contentbox .listbox .right p{
+body.listview .contentbox .listbox .right p{
     font-size: 15px;
     color: #6d6d6d;
     line-height: 1.6em;
 }
+/* 方块视图 */
+body.blockview .contentbox .listbox li{
+    float: left;
+    width: 31.5%;
+    height: 395px;
+    margin:0px 0 30px 2.75%;
+    box-shadow: #b1b1b1 0 0 1px inset;
+}
+body.blockview .contentbox .listbox li.f2{
+    margin-left: 0;
+}
+body.blockview .contentbox .listbox li>a{
+    display: block;
+    height: 100%;
+    color: #252525;
+    position: relative;
+    overflow: hidden;
+    transition:box-shadow .3s;
+}
+body.blockview .contentbox .listbox li:hover a{
+    box-shadow: #888 0 0 18px;
+}
+body.blockview .contentbox .listbox img{
+    width: 100%;
+    height: 246px;
+}
+body.blockview .contentbox .listbox .right{
+    height: 209px;
+    width: 100%;
+    border-top: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    box-sizing: content-box;
+}
+body.blockview .contentbox .listbox .right h3{
+    margin-bottom: 18px;
+    padding: 0 18px;
+    padding-top: 5px;
+    font-size: 18px;
+    color: #fff;
+    font-weight: bold;
+    min-height: 55px;
+    background-color: rgba(0,0,0,.5);
+    box-sizing: content-box;
+}
+body.blockview .contentbox .listbox .right h3 b{
+    font-weight: normal;
+    color: #6d6d6d;
+    font-size: 14px;
+    position: absolute;
+    bottom: 20px;
+    left: 18px;
+}
+body.blockview .contentbox .listbox .right h3 b.count{
+    left:auto;
+    right: 18px;
+}
+body.blockview .contentbox .listbox .right span{
+    font-size: 12px;
+    color: #999;
+    margin-bottom: 12px;
+}
+body.blockview .contentbox .listbox .right p{
+    font-size: 14px;
+    color: #6d6d6d;
+    line-height: 1.6em;
+    padding: 0 18px;
+}
+
 .contentbox .pagebox{
     text-align: center;
     margin-top: 80px;
@@ -90,4 +211,97 @@
     right: 0;
     bottom: 0;
     background:#eee url(../image/loading.gif) no-repeat 50% 50%;
+    z-index: 3;
+}
+/* banner */
+.banner{
+    width: 1180px;
+    height:350px;
+    position: relative;
+    margin: 30px auto 40px auto;
+}
+.frame{
+    width: 70%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+.box{
+    height:100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.box a{
+    height: 100%;
+    float: left;
+}
+.box img{
+    width: 100%;
+    height:100%;
+}
+.controls_1 a{
+    position: absolute;
+    width: 25px;
+    height:45px;
+    opacity: .3;
+    transition: opacity .2s;
+    z-index: 2;
+}
+.controls_1 a.prev{
+    left: 10px;
+    background: url(../image/icon/left.png) no-repeat 50% 50%;
+}
+.controls_1 a.next{
+    right: 10px;
+    background: url(../image/icon/right.png) no-repeat 50% 50%;
+}
+.banner .controls_1 a:hover{
+    opacity: 1 !important;
+}
+.banner:hover .controls_1 a{
+    opacity: .7;
+}
+.controls_2{
+    position: absolute;
+    bottom: 20px;
+    right: 200px;
+    z-index: 2;
+}
+.controls_2 .ctrlsbox{
+    float: right;
+}
+.controls_2 a{
+    width:25px;
+    height:6px;
+    background: #666;
+    display: block;
+    float: left;
+    margin-left: 8px;
+}
+.controls_2 a.active{
+    background: rgb(251,251,251);
+}
+.detailsbox{
+    width: 30%;
+    height: 100%;
+    padding: 30px;
+    background: #353535;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+}
+.detailsbox>*{
+    color: #cacaca
+}
+.detailsbox p{
+    margin-bottom: 20px;
+    line-height: 1.8em;
+}
+.detailsbox h2{
+    margin-bottom: 20px;
+    font-size: 18px;
+    color: rgb(251,251,251);
 }
